--- a/src/react-complete-guide/src/App.css
+++ b/src/react-complete-guide/src/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
 }
+
+button {
+  background: white;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
+}
