--- a/src/react-complete-guide/src/App.css
+++ b/src/react-complete-guide/src/App.css
@@ -2,9 +2,10 @@
   text-align: center;
 }
 
-button {
-  background: white;
-  border: 1px solid blue;
-  padding: 8px;
-  cursor: pointer;
+.red{
+  color:red;
+}
+
+.bold{
+  font-weight: bold;
 }
