--- a/src/react-complete-guide/src/App.css
+++ b/src/react-complete-guide/src/App.css
@@ -2,10 +2,24 @@
   text-align: center;
 }
 
-.red{
-  color:red;
+.red {
+  color: red;
 }
 
-.bold{
+.bold {
   font-weight: bold;
+}
+
+.button {
+  background-color: green;
+  color: white;
+  font: inherit;
+  border: 1px solid green;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: lightgreen;
+  color: black;
 }
